--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
     "core-js": "^3.6.5",
+    "firebase": "^8.6.3",
     "vue": "^3.0.0-0",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "vuefire": "^2.2.5"
   },
   "devDependencies": {
     "@capacitor/cli": "2.4.7",
